logs/offboard_pkg/build.make.152.log.stderr
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:1,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:3:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:15:7: error: redefinition of ‘class TaskManager’
   15 | class TaskManager
      |       ^~~~~~~~~~~
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:2:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:15:7: note: previous definition of ‘class TaskManager’
   15 | class TaskManager
      |       ^~~~~~~~~~~
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:3:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:10:27: error: ISO C++ forbids declaration of ‘multi_class’ with no type [-fpermissive]
   10 |     multi_class(/* args */);
      |                           ^
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:11:17: error: expected class-name before ‘(’ token
   11 |     ~multi_class();
      |                 ^
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:63: CMakeFiles/offboard_pkg_node.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
